--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Attendance Management System | Metclan</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="page_loader">
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
